<resources>
    <string name="app_name">Chocolife</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="menu_item_stocks">Акции</string>
    <string name="menu_item_profile">Акции</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_title_map">Карта</string>
    <string name="item_title_favourite">Избранное</string>
    <string name="item_title_sort">Сортировка</string>
    <string name="price">от %d тг</string>


    <string-array name="methodOfSort">
        <item>По популярности</item>
        <item>По рейтингу</item>
        <item>Сначала новые</item>
        <item>Цена по возрастанию</item>
        <item>Цена по убыванию</item>
    </string-array>
    <string name="title_activity_detail2">Detail2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_info_economy_from">экономия от %s тг.</string>
    <string name="tab_info_price_from">от %s тг.</string>
    <string name="tab_info_reviews_number">Отзывов: %s</string>
    <string name="tab_info_bought_number">Купили: %s</string>
    <string name="tab_info_review_rate">%s</string>
    <string name="tab_info_title">Любите петь? Тогда Вам сюда! Аренда кабинок на 2, 4 или 6 часов в караоке Soprano скидкой до 85%!</string>
    <string name="tab_info_title_short">%s</string>
    <string name="tab_info_protection">%s защита покупателей</string>
    <string name="tab_info_dealTimeout">Можно воспользоваться до %s</string>
    <string name="title_activity_maps">Map</string>
</resources>
