<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:isScrollContainer="true">
            <ViewFlipper
                android:id="@+id/view_flipper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                >

            </ViewFlipper>
            <TextView
                android:id="@+id/textViewDetailTitleShort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:textStyle="bold"
                android:textSize="@dimen/stockTitle_textSize"
                android:textColor="@android:color/black"
                app:layout_constraintTop_toBottomOf="@id/view_flipper"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                android:id="@+id/textViewDetailTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="@dimen/stockTitle_textSize"
                android:textColor="@android:color/black"
                app:layout_constraintTop_toBottomOf="@id/textViewDetailTitleShort"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
            <ImageView

                android:id="@+id/imageViewBackgroundForRating"
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_margin="8dp"
                android:background="@drawable/background_for_rating"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewDetailTitle"/>
            <ImageView
                android:id="@+id/imageViewFavouriteInRating"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:padding="2dp"
                android:layout_marginStart="2dp"
                android:src="@drawable/ic_favorite_white_24dp"
                app:layout_constraintStart_toStartOf="@id/imageViewBackgroundForRating"
                app:layout_constraintTop_toTopOf="@id/imageViewBackgroundForRating"
                app:layout_constraintBottom_toBottomOf="@id/imageViewBackgroundForRating"/>
            <TextView
                android:id="@+id/textViewReviewsRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textColor="@android:color/white"
                app:layout_constraintStart_toEndOf="@id/imageViewFavouriteInRating"
                app:layout_constraintTop_toTopOf="@id/imageViewBackgroundForRating"
                app:layout_constraintBottom_toBottomOf="@id/imageViewBackgroundForRating"/>
            <TextView

                android:id="@+id/textViewBoughtNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/imageViewBackgroundForRating"
                app:layout_constraintTop_toBottomOf="@id/imageViewBackgroundForRating"
                android:text="@string/tab_info_bought_number"/>

            <TextView

                android:id="@+id/textViewReviewsCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/imageViewBackgroundForRating"
                app:layout_constraintTop_toBottomOf="@id/textViewBoughtNumber"
                android:text="@string/tab_info_reviews_number"/>

            <TextView

                android:id="@+id/textViewPriceStockInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:layout_margin="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewDetailTitle"
                android:text="@string/tab_info_price_from"/>
            <TextView

                android:id="@+id/textViewEconomyStockInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:layout_constraintEnd_toEndOf="@id/textViewPriceStockInfo"
                app:layout_constraintTop_toBottomOf="@id/textViewPriceStockInfo"
                android:text="@string/tab_info_economy_from"/>

            <TextView
                android:id="@+id/textViewDealTimeout"
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tab_info_dealTimeout"
                app:layout_constraintTop_toBottomOf="@id/textViewEconomyStockInfo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                android:id="@+id/textViewProtection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/textViewDealTimeout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/tab_info_protection"
                android:textSize="18sp"
                android:background="@color/colorBackgroundGray"
                android:gravity="center"
                android:padding="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>



            <FrameLayout
                android:id="@+id/mapLayout"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:layout_constraintTop_toBottomOf="@id/textViewProtection"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:visibility="visible"/>
        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>